config travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ perl6:
 #     - rakudobrew build-panda
 #     - panda installdeps .
 
+cache:
+  directories:
+    - $HOME/.rakudobrew
+
 script:
     - make test
